<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.lucasfarias.aplicacao_projeto.PrincipalActivity"
    android:orientation="vertical"
    android:weightSum="1">

    <TextView
        android:id="@+id/label_km_inicial"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_km_inicio"/>
    <EditText
        android:id="@+id/txt_autonomia_veiculo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txt_km_Inicial"
        android:inputType="numberDecimal"
        />

    <TextView
        android:id="@+id/label_km_final"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_km_fim"/>
    <EditText
        android:id="@+id/txt_distancia_trajeto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txt_km_Final"
        android:inputType="numberDecimal"/>

    <TextView
        android:id="@+id/label_litros_abastecidos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_litros_abastecidos"/>
    <EditText
        android:id="@+id/txt_valor_combustivel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txt_litros_abastecidos"
        android:inputType="numberDecimal"/>

    <Button
        android:id="@+id/btn_calc_kml"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Calcular"
        android:background="@drawable/seletor"
        android:textColor="#ffffff"/>

    <TextView
        android:id="@+id/texto_resultado"
        android:layout_width="350dp"
        android:layout_height="87dp"
        android:textSize="30sp"
        android:textColor="@color/cor_texto"
        android:layout_weight="1"
        android:gravity="center"/>

</LinearLayout>
