<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.lucasfarias.aplicacao_projeto.PrincipalActivity">

    <TextView
        android:id="@+id/km_rodado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_km_rodado" />

    <EditText
        android:id="@+id/txt_km_rodado_total"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txt_km_rodado_total"
        android:inputType="numberDecimal" />

    <TextView
        android:id="@+id/label_litro_total"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_litro_total_abastecido" />

    <EditText
        android:id="@+id/txt_litros_abastecidos_total"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txt_km_total_litros"
        android:inputType="numberDecimal" />

    <Button
        android:id="@+id/btn_calc_tab3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/seletor"
        android:text="@string/btn_total_calc"
        android:textColor="#ffffff" />

    <TextView
        android:id="@+id/texto_resultado_tab3"
        android:layout_width="350dp"
        android:layout_height="87dp"
        android:layout_weight="1"
        android:gravity="center"
        android:textColor="@color/cor_texto"
        android:textSize="30sp" />

</LinearLayout>
