<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.lucasfarias.aplicacao_projeto.PrincipalActivity">

    <TextView
        android:id="@+id/label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_alcool" />

    <EditText
        android:id="@+id/txt_alcool"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/texto_acool"
        android:inputType="numberDecimal" />

    <TextView
        android:id="@+id/label2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_gasolina" />

    <EditText
        android:id="@+id/txt_gasolina"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/texto_gasolina"
        android:inputType="numberDecimal" />

    <Button
        android:id="@+id/btn_calc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/seletor"
        android:text="Calcular"
        android:textColor="#ffffff" />

    <TextView
        android:id="@+id/texto_resultado_tab2"
        android:layout_width="350dp"
        android:layout_height="87dp"
        android:layout_weight="1"
        android:gravity="center"
        android:textColor="@color/cor_texto"
        android:textSize="30sp" />

</LinearLayout>
